configs should now sync to client on login
spell damage renamed to spell power. Should make more sense if nature power increases healing, than nature damage increasing healing
loot now drops based on highest damager. So if you do most dmg to mob and it dies to fire, it will still drop loot!
fixed scaling spell dmg not being applied
removed some stats based on old spells which no longer exist. (runewords affected have other stats boosted)
talent and spell trees are now FULLSCREEN!
as there were too many keybinds, now guis will have to be accessed from the main hub (H). (Main hub, Hotbar swap + 5 hotbar buttons is already 7 keybinds!)
lowered stat scaling a bit
staffs and wands now need more energy and less mana.
added config for logging registry entries like compatible items
added config for setting specific dimension lvl 1 area in case spawn position is buggy or you have other needs
base player stats are now in the folder for json configs. You can add any stat now.
added configs for loot and xp penalty for level difference and if it should activate if player is lower lvl or just when higher lvl.
added configs for level penalties for loot and xp, you can define ranges and multipliers now, allows much more customization, even increasing loot for higher lvl mobs kills.
map dimensions are once again dynamic! You enter the dimension for the map you sacrificed, not whichever map was last sacrificed at the device,
If you want to play with friends, use group maps! 
Added stat scale configs.
added command to summon bosses
added new traits to talent tree, i'd advise looking at the left of the tree now :p
spells and area attacks no longer attack caster, pets or other players. I feel this might be undersirable for pvp servers.. I'll see what i can do, maybe a config?
normal weapons now have chance to do partly elemental attack damage. Should helper elemental builds before players get the uniques.